helm_input/kubetestapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: bin/kompose convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: kubetestapi
  name: kubetestapi
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: kubetestapi
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: bin/kompose convert
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: kubetestapi
    spec:
      containers:
        - args:
            - uvicorn
            - app:app
            - --host
            - 0.0.0.0
            - --port
            - "8000"
            - --reload
          image: matsvitt/kubetestapi:latest
          name: kubetestapi
          ports:
            - containerPort: 8000
              protocol: TCP
          volumeMounts:
            - mountPath: /app
              name: kubetestapi-cm0
            - mountPath: /data
              name: kubetestapi-claim1
            - mountPath: /datashared
              name: kubetestapi-claim2
      restartPolicy: Always
      volumes:
        - configMap:
            name: kubetestapi-cm0
          name: kubetestapi-cm0
        - name: kubetestapi-claim1
          persistentVolumeClaim:
            claimName: kubetestapi-claim1
        - name: kubetestapi-claim2
          persistentVolumeClaim:
            claimName: kubetestapi-claim2
