helm_input/kubetestapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: bin/kompose convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: kubetestapi
  name: kubetestapi
spec:
  ports:
    - name: "8000"
      port: 8000
      targetPort: 8000
  selector:
    io.kompose.service: kubetestapi
